[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "routeway-py"
version = "0.2.0"
description = "Python SDK for the Routeway API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "fabvali"}
]
keywords = ["routeway", "ai", "api", "llm", "chat", "openai-compatible"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.25.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
async = [
    "httpx>=0.24.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black",
    "mypy",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/fabvali/routeway-py"
Documentation = "https://github.com/fabvali/routeway-py#readme"
Repository = "https://github.com/fabvali/routeway-py.git"
Issues = "https://github.com/fabvali/routeway-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/routeway"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/LICENSE",
    "/README.md",
]